AUT-262 - Create a secure JWT for IPV authorize requests
- Going forward, we will be making our authorize requests to IPV using the JWT-Secured Authorization Request https://www.rfc-editor.org/rfc/rfc9101.html
- Give ipv authorize permissions to the IPV token signing key and create a signed JWT which will contain the required claims required by IPV.
- Add the request parameter to the current auth request, alongside the existing params. This will be ignored until IPV start parsing it etc, at that point we will be able to remove the other parameters.
- Set the expiry time of the JWT at 3 mins for now. This is subject to change.
- This is required as PII may be included at some point in the future so it needs to be secured. There's further work to encrypt this JWT